divide step2 and step3